--- a/els.html
+++ b/els.html
@@ -4,14 +4,14 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1">
-		<link rel="icon" href="./img/Keqing.png">
+		<link rel="icon" href="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/Keqing.png">
 		<title>俄罗斯方块</title>
-		<link href="./js/about.c1ba2b58.js" rel="prefetch">
-		<link href="./css/app.6434ae0b.css" rel="preload" as="style">
-		<link href="./js/app.fbb38b0e.js" rel="preload" as="script">
-		<link href="./js/chunk-vendors.37105d86.js" rel="preload" as="script">
-		<link href="./css/app.6434ae0b.css" rel="stylesheet">
-                <link rel="stylesheet" href="./css/index.css" type="text/css"/ class="o"> 
+		<link href="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/js/about.c1ba2b58.js" rel="prefetch">
+		<link href="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/css/app.6434ae0b.css" rel="preload" as="style">
+		<link href="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/js/app.fbb38b0e.js" rel="preload" as="script">
+		<link href="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/js/chunk-vendors.37105d86.js" rel="preload" as="script">
+		<link href="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/css/app.6434ae0b.css" rel="stylesheet">
+                <link rel="stylesheet" href="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/css/index.css" type="text/css"/ class="o"> 
 		<style>
 			.my-class {
 			background-color: #0000ff;
@@ -38,7 +38,7 @@
 			</strong>
 		</noscript>
 		<div id="app"></div>
-		<script src="./js/chunk-vendors.37105d86.js"></script>
-		<script src="./js/app.fbb38b0e.js"></script>
+		<script src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/js/chunk-vendors.37105d86.js"></script>
+		<script src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/js/app.fbb38b0e.js"></script>
 	</body>
 </html>
