--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<title>家宠百科</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=yes" />
 		<!-- <script src="./js/sty.js"></script> -->
-                <link rel="icon" href="./img/Keqing.png">  
-		<link rel="stylesheet" href="./css/index.css" type="text/css"/ class="o">
+                <link rel="icon" href="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/Keqing.png">  
+		<link rel="stylesheet" href="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/css/index.css" type="text/css"/ class="o">
 		<link rel="stylesheet" href="https://cdn1.tianli0.top/gh/linjiangyu2/halo/cdn/bak/APlayer.min.css"/ type="text/css"/ class="o">
 		<script src="https://cdn1.tianli0.top/gh/linjiangyu2/halo/cdn/bak/APlayer.min.js"></script>
                 <link href="https://cdn1.tianli0.top/gh/linjiangyu2/halo/sakana.css" rel="stylesheet">
@@ -67,18 +67,18 @@
 <div>
     <a href="./els.html">
         <p id="footls2">游玩</p>
-        <img src="./img/俄罗斯方块3.png" width="4%" id="footls1">
+        <img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/俄罗斯方块3.png" width="4%" id="footls1">
     </a>
 </div> 
 		<nav><!-- 图片通栏 -->
 			<div class="nav">
 				<div class="navimg">
 					<div class="navimgm">
-					<div class="navimgms"><img src="img/dog.jpg"></div>
-					<div class="navimgms"><img src="img/cat.jpg"></div>
-					<div class="navimgms"><img src="img/water.jpg"></div>
-					<div class="navimgms"><img src="img/bird.jpg"></div>
-					<div class="navimgms"><img src="img/reptile.jpg"></div>
+					<div class="navimgms"><img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/dog.jpg"></div>
+					<div class="navimgms"><img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/cat.jpg"></div>
+					<div class="navimgms"><img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/water.jpg"></div>
+					<div class="navimgms"><img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/bird.jpg"></div>
+					<div class="navimgms"><img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/reptile.jpg"></div>
 				</div>
 				</div>
 			</div>
@@ -92,7 +92,7 @@
 					<hr />
 					<div class="textboxlbox">
 						<div>
-							<img src="./img/cat1.jpg" />
+							<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/cat1.jpg" />
 							<div class="boxtext">
 								<ul>
 									<li><a href="javascript:;">在中欧拥有5000年历史的家猫</a></li>
@@ -102,7 +102,7 @@
 							</div>
 						</div>
 						<div>
-							<img src="./img/dog1.jpg" />
+							<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/dog1.jpg" />
 							<div class="boxtext">
 								<ul>
 									<li><a href="javascript:;">美国一小狗为见主人靠嗅觉跋涉3公里美国一小狗为见主人靠嗅觉跋涉3公里</a></li>
@@ -112,7 +112,7 @@
 							</div>
 						</div>
 						<div>
-							<img src="./img/cat2.jpg" />
+							<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/cat2.jpg" />
 							<div class="boxtext">
 								<ul>
 									<li><a href="javascript:;">猫咪寿命排行榜：这8种猫都是“长寿喵”，你家猫咪排第几?</a></li>
@@ -122,7 +122,7 @@
 							</div>
 						</div>
 						<div>
-							<img src="./img/bird1.jpg" />
+							<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/bird1.jpg" />
 							<div class="boxtext">
 								<ul>
 									<li><a href="javascript:;">养文鸟对人的危害？文鸟喜欢生活在什么环境？</a></li>
@@ -387,5 +387,5 @@
         });
     </script>
 	</body>
-	<script src="./js/sty.js" class="l" style="nav-index: 0;"></script>
+	<script src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/js/sty.js" class="l" style="nav-index: 0;"></script>
 </html>
