--- a/move.html
+++ b/move.html
@@ -5,9 +5,9 @@
 		<meta charset="utf-8">
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-                <link rel="icon" href="./img/Keqing.png"> 
-		<link href="css/move.css" rel="stylesheet" type="text/css"/>
-		<script src="js/move.js"></script>
+                <link rel="icon" href="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/Keqing.png"> 
+		<link href="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/css/move.css" rel="stylesheet" type="text/css"/>
+		<script src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/js/move.js"></script>
 		<link rel="stylesheet" href="https://cdn1.tianli0.top/gh/linjiangyu2/halo/cdn/bak/APlayer.min.css"/ type="text/css"/ class="o">
 		<script src="https://cdn1.tianli0.top/gh/linjiangyu2/halo/cdn/bak/APlayer.min.js"></script>
 		<script src="https://cdn1.tianli0.top/gh/linjiangyu2/halo/cdn/bak/Meting.min.js"></script>
@@ -31,16 +31,16 @@
 			<div class="btn"></div>
 			<div class="serch">搜索</div>
 			<div class="login">
-					<img src="img/登录2.png">
+					<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/登录2.png">
 			</div>
 		</div>
 		<div class="nav">
 			<div class="imgbox">
-			<img src="img/cat.jpg">
-			<img src="img/dog.jpg">
-			<img src="img/bird.jpg">
-			<img src="img/water.jpg">
-			<img src="img/reptile.jpg">
+			<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/cat.jpg">
+			<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/dog.jpg">
+			<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/bird.jpg">
+			<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/water.jpg">
+			<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/reptile.jpg">
 			</div>
 			<div class="l"><</div>
 			<div class="r">></div>
@@ -48,7 +48,7 @@
 		<div class="box">
 			<div class="textboxlbox">
 					<div>
-						<img src="./img/cat1.jpg" />
+						<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/cat1.jpg" />
 						<div class="boxtext">
 							<ul>
 								<li><a href="javascript:;">在中欧拥有5000年历史的家猫</a></li>
@@ -58,7 +58,7 @@
 						</div>
 					</div>
 					<div>
-						<img src="./img/dog1.jpg" />
+						<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/dog1.jpg" />
 						<div class="boxtext">
 							<ul>
 								<li><a href="javascript:;">美国一小狗为见主人靠嗅觉跋涉3公里美国一小狗为见主人靠嗅觉跋涉3公里</a></li>
@@ -68,7 +68,7 @@
 						</div>
 					</div>
 					<div>
-						<img src="./img/cat2.jpg" />
+						<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/cat2.jpg" />
 						<div class="boxtext">
 							<ul>
 								<li><a href="javascript:;">猫咪寿命排行榜：这8种猫都是“长寿喵”，你家猫咪排第几?</a></li>
@@ -78,7 +78,7 @@
 						</div>
 					</div>
 					<div>
-						<img src="./img/bird1.jpg" />
+						<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/bird1.jpg" />
 						<div class="boxtext">
 							<ul>
 								<li><a href="javascript:;">养文鸟对人的危害？文鸟喜欢生活在什么环境？</a></li>
