--- a/reptile.html
+++ b/reptile.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8">
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-                <link rel="icon" href="./img/Keqing.png">
-		<link rel="stylesheet" href="./css/index.css" type="text/css" / class="o">
+                <link rel="icon" href="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/Keqing.png">
+		<link rel="stylesheet" href="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/css/index.css" type="text/css" / class="o">
                 <link rel="stylesheet" href="https://cdn1.tianli0.top/gh/linjiangyu2/halo/cdn/bak/APlayer.min.css"/ type="text/css"/ class="o">
 		<script src="https://cdn1.tianli0.top/gh/linjiangyu2/halo/cdn/bak/APlayer.min.js"></script>
 		<script src="https://cdn1.tianli0.top/gh/linjiangyu2/halo/cdn/bak/Meting.min.js"></script>
@@ -51,14 +51,14 @@
 <div>
     <a href="./els.html">
         <p id="footls2">游玩</p>
-        <img src="./img/俄罗斯方块3.png" width="4%" id="footls1">
+        <img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/俄罗斯方块3.png" width="4%" id="footls1">
     </a>
 </div>    
 		<section>
 			<div class="dbox">
 				<div class="dboxs">
 					<div>
-						<img src="img/ssx.jpg" />
+						<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/ssx.jpg" />
 					</div>
 					<div>
 						<ul>
@@ -90,7 +90,7 @@
 				</div>
 				<div class="dboxs">
 					<div>
-						<img src="img/hmjs.jpg" />
+						<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/hmjs.jpg" />
 					</div>
 					<div>
 						<ul>
@@ -119,7 +119,7 @@
 				</div>
 				<div class="dboxs">
 					<div>
-						<img src="img/zwcg.jpg" />
+						<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/zwcg.jpg" />
 					</div>
 					<div>
 						<ul>
@@ -171,7 +171,7 @@
 			</div>
 		</footer>
 
-		<img src="img/g.gif" class="gif" />
+		<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/g.gif" class="gif" />
 <script>
     let stop, staticx;
     const img = new Image();
@@ -340,5 +340,5 @@
     }
 </script>
 	</body>
-	<script src="./js/reptile.js"></script>
+	<script src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/js/reptile.js"></script>
 </html>
