--- a/water.html
+++ b/water.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8">
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=yes" />
-		<link rel="stylesheet" href="./css/index.css" type="text/css" / class="o">
-                <link rel="icon" href="./img/Keqing.png"> 
+		<link rel="stylesheet" href="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/css/index.css" type="text/css" / class="o">
+                <link rel="icon" href="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/Keqing.png"> 
 		<link rel="stylesheet" href="https://cdn1.tianli0.top/gh/linjiangyu2/halo/cdn/bak/APlayer.min.css"/ type="text/css"/ class="o">
 		<script src="https://cdn1.tianli0.top/gh/linjiangyu2/halo/cdn/bak/APlayer.min.js"></script>
 		<script src="https://cdn1.tianli0.top/gh/linjiangyu2/halo/cdn/bak/Meting.min.js"></script>
@@ -52,14 +52,14 @@
 <div>
     <a href="./els.html">
         <p id="footls2">游玩</p>
-        <img src="./img/俄罗斯方块3.png" width="4%" id="footls1">
+        <img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/俄罗斯方块3.png" width="4%" id="footls1">
     </a>
 </div>  
 		<section>
 			<div class="dbox">
 				<div class="dboxs">
 					<div>
-						<img src="img/sxy.jpg" />
+						<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/sxy.jpg" />
 					</div>
 					<div>
 						<ul>
@@ -87,7 +87,7 @@
 				</div>
 				<div class="dboxs">
 					<div>
-						<img src="img/jy.jpg" />
+						<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/jy.jpg" />
 					</div>
 					<div>
 						<ul>
@@ -115,7 +115,7 @@
 				</div>
 				<div class="dboxs">
 					<div>
-						<img src="img/jwy.jpg" />
+						<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/jwy.jpg" />
 					</div>
 					<div>
 						<ul>
@@ -172,7 +172,7 @@
 				<input type="submit" placeholder="搜索" class="logos1" />
 			</div>
 		</footer>
-		<img src="img/g.gif" class="gif" />
+		<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/g.gif" class="gif" />
 <script>
     let stop, staticx;
     const img = new Image();
@@ -341,5 +341,5 @@
     }
 </script> 
 	</body>
-	<script src="js/water.js"></script>
+	<script src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/js/water.js"></script>
 </html>
