--- a/bird.html
+++ b/bird.html
@@ -5,7 +5,7 @@
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=yes" />
 		<link rel="stylesheet" href="./css/index.css" type="text/css" / class="o">
-                <link rel="icon" href="./img/Keqing.png">
+                <link rel="icon" href="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/Keqing.png">
 	        <link rel="stylesheet" href="https://cdn1.tianli0.top/gh/linjiangyu2/halo/cdn/bak/APlayer.min.css"/ type="text/css"/ class="o">
 		<script src="https://cdn1.tianli0.top/gh/linjiangyu2/halo/cdn/bak/APlayer.min.js"></script>
 		<script src="https://cdn1.tianli0.top/gh/linjiangyu2/halo/cdn/bak/Meting.min.js"></script>
@@ -52,14 +52,14 @@
 <div>
     <a href="./els.html">
         <p id="footls2">游玩</p>
-        <img src="./img/俄罗斯方块3.png" width="4%" id="footls1">
+        <img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/俄罗斯方块3.png" width="4%" id="footls1">
     </a>
 </div> 
 		<section>
 			<div class="dbox">
 				<div class="dboxs">
 					<div>
-						<img src="img/bln.jpg" />
+						<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/bln.jpg" />
 					</div>
 					<div>
 						<ul>
@@ -89,7 +89,7 @@
 				</div>
 				<div class="dboxs">
 					<div>
-						<img src="img/xfyw.jpg" />
+						<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/xfyw.jpg" />
 					</div>
 					<div>
 						<ul>
@@ -113,7 +113,7 @@
 				</div>
 				<div class="dboxs">
 					<div>
-						<img src="img/xxn.jpg" />
+						<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/xxn.jpg" />
 					</div>
 					<div>
 						<ul>
@@ -331,7 +331,7 @@
         }
     }
 </script> 
-		<img src="img/g.gif" class="gif" />
+		<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/g.gif" class="gif" />
 	</body>
-	<script src="js/bird.js"></script>
+	<script src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/js/bird.js"></script>
 </html>
