--- a/cat.html
+++ b/cat.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8">
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=yes" />
-		<link rel="stylesheet" href="./css/index.css" type="text/css"/ class="o">
-                <link rel="icon" href="./img/Keqing.png"> 
+		<link rel="stylesheet" href="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/css/index.css" type="text/css"/ class="o">
+                <link rel="icon" href="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/Keqing.png"> 
 	        <link rel="stylesheet" href="https://cdn1.tianli0.top/gh/linjiangyu2/halo/cdn/bak/APlayer.min.css"/ type="text/css"/ class="o">
 		<script src="https://cdn1.tianli0.top/gh/linjiangyu2/halo/cdn/bak/APlayer.min.js"></script>
 		<script src="https://cdn1.tianli0.top/gh/linjiangyu2/halo/cdn/bak/Meting.min.js"></script>
@@ -49,14 +49,14 @@
 <div>
     <a href="./els.html">
         <p id="footls2">游玩</p>
-        <img src="./img/俄罗斯方块3.png" width="4%" id="footls1">
+        <img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/俄罗斯方块3.png" width="4%" id="footls1">
     </a>
 </div>
 		<section>
 		<div class="dbox">
 				<div class="dboxs">
 					<div>
-						<img src="img/lanmao.jpg" />
+						<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/lanmao.jpg" />
 					</div>
 					<div>
 						<ul>
@@ -81,7 +81,7 @@
 				</div>
 				<div class="dboxs">
 					<div>
-						<img src="img/meiduan.jpg" />
+						<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/meiduan.jpg" />
 					</div>
 					<div>
 						<ul>
@@ -105,7 +105,7 @@
 				</div>
 				<div class="dboxs">
 					<div>
-						<img src="img/lihuamao.jpg" />
+						<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/lihuamao.jpg" />
 					</div>
 					<div>
 						<ul>
@@ -149,7 +149,7 @@
 				<input type="submit" placeholder="搜索" class="logos1"/>
 			</div>
 		</footer>
-		<img src="img/g.gif" class="gif"/>
+		<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/g.gif" class="gif"/>
 <script>
     let stop, staticx;
     const img = new Image();
@@ -318,5 +318,5 @@
     }
 </script>
 	</body>
-	<script src="./js/sty.js"></script>
+	<script src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/js/sty.js"></script>
 </html>
