--- a/dl.html
+++ b/dl.html
@@ -3,11 +3,11 @@
 	<head>
 		<meta charset="utf-8">
 		<title></title>
-		<link rel="stylesheet" href="css/cst.css" type="text/css"/>
+		<link rel="stylesheet" href="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/css/cst.css" type="text/css"/>
 		<link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="https://cdn1.tianli0.top/gh/linjiangyu2/halo/cdn/bak/APlayer.min.css"/ type="text/css"/ class="o">
 		<script src="https://cdn1.tianli0.top/gh/linjiangyu2/halo/cdn/bak/APlayer.min.js"></script>
-                <link rel="icon" href="./img/Keqing.png"> 
+                <link rel="icon" href="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/Keqing.png"> 
 		<script src="https://cdn1.tianli0.top/gh/linjiangyu2/halo/cdn/bak/Meting.min.js"></script>
 		<meting-js
 		            server="netease"
@@ -25,7 +25,7 @@
 	</head>
 	<body>
 		<header>
-			<a href="./index.html" class="logo"><img src="img/家宠百科1.png"></a>
+			<a href="./index.html" class="logo"><img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/家宠百科1.png"></a>
 			<div class="search">
 				<input type="text" placeholder="搜索">
 				<i class="fa-search" aria-hidden="true"></i>
@@ -222,5 +222,5 @@
     }
 </script>
 	</body>
-	<script src="js/dl.js"></script>
+	<script src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/js/dl.js"></script>
 </html>
