--- a/dog.html
+++ b/dog.html
@@ -4,10 +4,10 @@
 		<meta charset="utf-8">
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=yes" />
-		<link rel="stylesheet" href="./css/index.css" type="text/css"/ class="o">
+		<link rel="stylesheet" href="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/css/index.css" type="text/css"/ class="o">
 		<link rel="stylesheet" href="https://cdn1.tianli0.top/gh/linjiangyu2/halo/cdn/bak/APlayer.min.css"/ type="text/css"/ class="o">
 		<script src="https://cdn1.tianli0.top/gh/linjiangyu2/halo/cdn/bak/APlayer.min.js"></script>
-                <link rel="icon" type="image/x-icon" href="./favicon.ico">
+                <link rel="icon" type="image/x-icon" href="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/Keqing.png">
 		<script src="https://cdn1.tianli0.top/gh/linjiangyu2/halo/cdn/bak/Meting.min.js"></script>
 		<meting-js
 		            server="netease"
@@ -49,14 +49,14 @@
 <div>
     <a href="./els.html">
         <p id="footls2">游玩</p>
-        <img src="./img/俄罗斯方块3.png" width="4%" id="footls1">
+        <img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/俄罗斯方块3.png" width="4%" id="footls1">
     </a>
 </div> 
 		<section>
 			<div class="dbox">
 				<div class="dboxs">
 					<div>
-						<img src="img/jinmao.jpg" />
+						<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/jinmao.jpg" />
 					</div>
 					<div>
 						<ul>
@@ -83,7 +83,7 @@
 				</div>
 				<div class="dboxs">
 					<div>
-						<img src="img/lbld.jpg" />
+						<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/lbld.jpg" />
 					</div>
 					<div>
 						<ul>
@@ -110,7 +110,7 @@
 				</div>
 				<div class="dboxs">
 					<div>
-						<img src="img/hsq.jpg" />
+						<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/hsq.jpg" />
 					</div>
 					<div>
 						<ul>
@@ -157,7 +157,7 @@
 			</div>
 		</footer>
 		
-		<img src="img/g.gif" class="gif"/>
+		<img src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/g.gif" class="gif"/>
 <script>
     let stop, staticx;
     const img = new Image();
@@ -326,5 +326,5 @@
     }
 </script>
 	</body>
-	<script src="js/dog.js"></script>
+	<script src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/js/dog.js"></script>
 </html>
