--- a/return.html
+++ b/return.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>提交成功</title>
-    <link rel="icon" href="./img/Keqing.png">
+    <link rel="icon" href="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/img/Keqing.png">
     <style>
       body {
         background: linear-gradient(to right, #373B44, #4286f4);
@@ -30,7 +30,7 @@
     </style>
     <!-- 引入 Google Fonts 和 Font Awesome -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link href="./css/font_4088526_wzc9iiukt5.css" rel="stylesheet">
+    <link href="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/css/font_4088526_wzc9iiukt5.css" rel="stylesheet">
     
     <script type="text/javascript">
       setTimeout(function() {
