--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
                 <link href="https://cdn1.tianli0.top/gh/linjiangyu2/halo/sakana.css" rel="stylesheet">
 		<script src="https://cdn1.tianli0.top/gh/linjiangyu2/halo/cdn/bak/Meting.min.js"></script>
 		<script type="text/javascript" src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/js/sweetalert.min.js"></script>
+		<script type="text/javascript" src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/js/Meting.min.js"></script>
 		<meting-js
 		            server="netease"
 		            type="playlist"
