--- a/reptile.html
+++ b/reptile.html
@@ -9,6 +9,7 @@
                 <link rel="stylesheet" href="https://cdn1.tianli0.top/gh/linjiangyu2/halo/cdn/bak/APlayer.min.css"/ type="text/css"/ class="o">
 		<script src="https://cdn1.tianli0.top/gh/linjiangyu2/halo/cdn/bak/APlayer.min.js"></script>
 		<script src="https://cdn1.tianli0.top/gh/linjiangyu2/halo/cdn/bak/Meting.min.js"></script>
+                <script type="text/javascript" src="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/js/Meting.min.js"></script>
 		<meting-js
 		            server="netease"
 		            type="playlist"
