--- a/we.html
+++ b/we.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Cool Four People About Page</title>
+	<title>关于我们</title>
 	<!-- External CSS -->
 	<!-- <link rel="stylesheet" href="style.css"> -->
 	<link rel="stylesheet" href="https://cdn.staticaly.com/gh/ChenMouNou/Web@main/css/about.css">
@@ -182,7 +182,7 @@
 	</section>
         <section class="contacts">
         	<div class="containers">
-        		<h2>Contact Us</h2>
+        		<h2>留言板</h2>
 			<div class="cc">
         		<form action="./return.html" method="GET">
         			<label for="name">Name</label>
