--- a/index.html
+++ b/index.html
@@ -77,7 +77,16 @@
 	  button: "OK",
 	});
 </script>
-<script> window.onkeydown = window.onkeyup = window.onkeypress = function (event) { if (event.keyCode = 123) { swal("哟 打开控制台呢 你想干什么😈") .then((value) => { swal(`你最好不要👻👻`); }); } } </script>
+<script>
+window.onkeydown = window.onkeyup = window.onkeypress = function (event) {  
+    if (event.keyCode = 123) {  
+	swal("哟 打开控制台呢 你想干什么😈")
+	.then((value) => {
+	  swal(`你最好不要👻👻`);
+	});
+    }  
+}
+</script>
 <div>
     <a href="./els.html">
         <p id="footls2">游玩</p>
