--- a/we.html
+++ b/we.html
@@ -41,6 +41,15 @@
           right: 10px;
           border-radius: 5%;
         }
+	.contacts {
+	    height: 780px;
+	    padding: 80px 0;
+	    background: #ededed;
+	    background-image: url(https://cdn.jsdelivr.net/gh/linjiangyu2/halo/img/music.webp);
+	    background-size: cover;
+	    background-repeat: no-repeat;
+	    background-position: center center;
+	}
 		body {
             background: linear-gradient(to bottom, #273436, #53758b);
             }
